--- a/base/parameters.yml
+++ b/base/parameters.yml
@@ -12,11 +12,12 @@ use_automated_segmentation: False # if True, use the segment anything model to s
 
 # segmentation_parameters
 
+gaussian_sigma: 2.0
 number_of_vertical_tiles: 3
 
 extend_x: 5000
 extend_y: 5000
 
-n_sample: 1000
+n_sample: 5000
 
 
