--- a/base/parameters.yml
+++ b/base/parameters.yml
@@ -5,6 +5,11 @@ channel_nuclei: 0  # channel for nuclei, optional
 channel_EC_junction: 1  # commonly the VE-cadherin marker
 channel_siRNA: 2  # channel for siRNA marker, optional
 
+# segmentation parameters
+filter_nuclei: True  # if True, filter out nuclei based on size
+nuclei_max_area: 400  # threshold for nuclei segmentation
+nuclei_min_area: 100  # minimum size of nuclei in pixels
+
 # device geometry or setup
 
 use_automated_segmentation: False # if True, use the segment anything model to segment the device geometry, if False, create a binary mask of the device geometry and add _device_mask to the filename before the filename extension. Example file.tif -> add file_device_mask.tif
