--- a/base/parameters.yml
+++ b/base/parameters.yml
@@ -9,6 +9,7 @@ channel_siRNA: 2  # channel for siRNA marker, optional
 filter_nuclei: True  # if True, filter out nuclei based on size
 nuclei_max_area: 400  # threshold for nuclei segmentation
 nuclei_min_area: 100  # minimum size of nuclei in pixels
+nuclei_min_intensity: 0.1  # minimum mean vecad_intensity of nuclei
 
 # device geometry or setup
 
